testing/errors/returnnotwithinamacro1.a
; (this file also gets included by returnnotwithinamacro2.a)

; "!return" only works inside a macro:
	!return	; -> "!return not within a macro"
